--- a/ vercel.json
+++ b/ vercel.json
@@ -1,5 +1,6 @@
 {
-  "redirects": [
-    { "source": "/(.*)", "destination": "/", "statusCode": 200 }
+  "cleanUrls": true,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
