--- a/ vercel.json
+++ b/ vercel.json
@@ -1,6 +1,5 @@
 {
-  "cleanUrls": true,
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+  "redirects": [
+    { "source": "/(.*)", "destination": "/", "statusCode": 200 }
   ]
 }
